# ultimo-tocco

./: .gitignore  CMakeLists.txt  NewProject.jucer  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tools/: snapshot.cpp
